name:                unitym-servant
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/unitym-servant#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.UnityM.Servant
  build-depends:       base >= 4.7 && < 5
                        , mtl
                        , servant-server
                        , text
                        , transformers
                        , unitym
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/unitym-servant
